# reciept-tracker

./: .gitignore  Dashboard.py  README.md  app.py  pyproject.toml
config/: env.py  settings.py
models/: reciept.py
pages/: Receipt History.py  dashboard.py  upload.py
services/: db_service.py  ocr_service.py
utils/: extract_receipt.py
