[project]
name = "receipt-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Cur, Logan Hooker"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "google-genai (>=1.11.0,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "plotly (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
